# PakingProject

project3/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet-v01.glade.bak  projet-v01.gladep
project3/autom4te.cache/: output.1  requests  traces.0  traces.1
project3/po/: Makefile  Makefile.in
project3/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  client.c  client.h  client.txt  interface.c  interface.c.bak  interface.h.bak  login.txt  main.c  point.txt  projet-v01  user.c  user.h
project3/src/.deps/: callbacks.Po  client.Po  user.Po
